# Mobile-3D-Gaussian-Splatting

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE_01.md  CMakeLists.txt  LICENSE  README.md  configure.py
android/: CMakeLists.txt  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: android_main.cpp
android/app/src/main/res/values/: strings.xml
cmake/: app.cmake  compileshaders.cmake  copy_assets.cmake  copy_if_exists.cmake  core.cmake  engine.cmake  imgui.cmake
docs/: CORE_LIBRARY_DESIGN.md  CORE_LIB_IMPLEMENTATION_PLAN.md  RHI_DESIGN.md  RHI_HANDLE_ARCHITECTURE.md  project_impl_plan.md
docs/rendering_hardware_interface/: rhi_design.md
examples/: CMakeLists.txt
examples/3dgs-renderer/: 3dgs_renderer_app.cpp  3dgs_renderer_app.h  CMakeLists.txt  main.cpp
examples/gpu-sorting-renderer/: CMakeLists.txt  gpu_sorting_renderer_app.cpp  gpu_sorting_renderer_app.h  main.cpp
examples/hybrid-splat-renderer/: CMakeLists.txt  buffer_memory_tracker.h  hybrid_splat_renderer_app.cpp  hybrid_splat_renderer_app.h  main.cpp
examples/hybrid-splat-renderer/docs/: design_requirements.md
examples/naive-splat-cpu/: CMakeLists.txt  main.cpp  naive_splat_cpu_app.cpp  naive_splat_cpu_app.h
examples/naive-splat-cpu/docs/: naive_splat_cpu_design.md
examples/naive-splat-cpu/shaders/: raster.frag  raster.vert
examples/naive-splat-cpu/shaders/compiled/: raster.frag.spv  raster.vert.spv
examples/particles/: CMakeLists.txt  main.cpp  particles_app.cpp  particles_app.h
examples/particles/shaders/: debug_sphere.frag  debug_sphere.vert  debug_sphere_fs.hlsl  debug_sphere_vs.hlsl  particle_compute.comp  particle_compute_cs.hlsl  particle_render.frag  particle_render.vert  particle_render_fs.hlsl  particle_render_vs.hlsl
examples/perf-tests/: CMakeLists.txt  allocator_performance.cpp  hash_performance.cpp  main.cpp  memory_performance.cpp  perf_framework.h  vector_performance.cpp
examples/scene-test/: CMakeLists.txt  main.cpp
examples/splat-loader/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp  triangle_app.cpp  triangle_app.h
examples/triangle/shaders/: triangle.vert  triangle_fs.hlsl  triangle_vs.hlsl
examples/triangle/shaders/compiled/: triangle.vert.spv  triangle_fs.dxil  triangle_fs.metallib  triangle_fs.spv  triangle_vs.dxil  triangle_vs.metallib  triangle_vs.spv
examples/unit-tests/: CMakeLists.txt  main.cpp  test_allocators.cpp  test_async_buffer_upload.cpp  test_custom_vector.cpp  test_framework.h  test_hash.cpp  test_platform.cpp  test_pmr_allocators.cpp  test_scene.cpp  test_splat_loader.cpp  test_string.cpp  test_utils.h
include/core/: log.h
include/core/math/: aabb.h  affine.h  basics.h  color.h  frustum.h  math.h  matrix.h  quaternion.h  sphere.h  (+1 more)
rhi/: CMakeLists.txt
rhi/docs/: RHI_DESIGN.md  RHI_HANDLE_ARCHITECTURE.md  RHI_METAL3_IMPLEMENTATION_PLAN.md
rhi/include/: rhi.h  rhi_types.h
rhi/include/common/: ref_count.h
rhi/include/rhi/: rhi.h  rhi_types.h
rhi/src/: rhi.cpp
rhi/src/backends/metal3/: metal_backend.cpp  metal_backend.h  metal_buffer.cpp  metal_commandlist.cpp  metal_conversions.cpp  metal_conversions.h  metal_descriptorset.cpp  metal_device.cpp  metal_fence.cpp  metal_pipeline.cpp  metal_query.cpp  metal_semaphore.cpp  metal_shader.cpp  metal_swapchain.cpp  metal_texture.cpp  metal_textureview.cpp
rhi/src/backends/vulkan/: vma_implementation.cpp  vulkan_backend.h  vulkan_buffer.cpp  vulkan_commandlist.cpp  vulkan_conversions.cpp  vulkan_descriptorset.cpp  vulkan_device.cpp  vulkan_fence.cpp  vulkan_pipeline.cpp  vulkan_query.cpp  vulkan_semaphore.cpp  vulkan_shader.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_textureview.cpp
rhi/src/vulkan/: vulkan_backend.h  vulkan_buffer.cpp  vulkan_commandlist.cpp  vulkan_conversions.cpp  vulkan_descriptorset.cpp  vulkan_device.cpp  vulkan_fence.cpp  vulkan_pipeline.cpp  vulkan_semaphore.cpp  vulkan_shader.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_textureview.cpp
rhi/tests/: CMakeLists.txt  main.cpp  test_framework.h  test_ref_count.cpp  test_resource_management.cpp
scripts/: configure.py  download_assets.py  format.py
scripts/platform_config/: __init__.py  linux.py  macos.py  platformBase.py  windows.py
scripts/tests/: test_configure.py
scripts/utils/: configure_utils.py  term.py
shaders/: composite.frag.hlsl  compute_raster_types.h  depth_calc.comp  depth_calc.comp.hlsl  fullscreen.vert.hlsl  identify_ranges.comp.hlsl  preprocess.comp.hlsl  radix_histogram.comp  radix_histogram.comp.hlsl  radix_histogram_indirect.comp.hlsl  radix_histogram_subgroup.comp  radix_histogram_subgroup.comp.hlsl  radix_histogram_subgroup_indirect.comp.hlsl  radix_prefix_scan.comp  radix_prefix_scan.comp.hlsl  radix_prefix_scan_indirect.comp.hlsl  radix_prefix_scan_subgroup.comp  radix_prefix_scan_subgroup.comp.hlsl  radix_prefix_scan_subgroup_indirect.comp.hlsl  radix_scatter_pairs.comp  radix_scatter_pairs.comp.hlsl  radix_scatter_pairs_indirect.comp.hlsl  radix_scatter_pairs_prescan.comp  radix_scatter_pairs_prescan.comp.hlsl  radix_scatter_pairs_prescan_indirect.comp.hlsl  radix_scatter_unpack.comp.hlsl  radix_scatter_unpack_indirect.comp.hlsl  radix_scatter_unpack_prescan.comp.hlsl  radix_scatter_unpack_prescan_indirect.comp.hlsl  raster.vert  rekey_tile_pairs.comp.hlsl  shaderio.h  sort_pairs_pack.comp.hlsl  sort_pairs_unpack.comp.hlsl  splat_precompute.comp.hlsl  splat_raster.frag  splat_raster.frag.hlsl  splat_raster.vert  splat_raster.vert.hlsl  splat_raster_compute.comp.hlsl  (+4 more)
shaders/compiled/: triangle.vert.spv
src/app/: android_adapter.cpp  camera.cpp  desktop_adapter.cpp  device_manager.cpp
src/core/: core.cpp  log.cpp  parallel.cpp  platform.cpp  timer.cpp  vfs.cpp
src/engine/: cpu_splat_sort_backend.cpp  cpu_splat_sorter.cpp  gpu_splat_sort_backend.cpp  gpu_splat_sorter.cpp  mesh_generator.cpp  scene.cpp  shader_factory.cpp  splat_loader.cpp  splat_mesh.cpp  splat_sorter.cpp
(+77 files in other folders)
