# Examples directory

# Add triangle example
add_subdirectory(triangle)

# Add particles example
add_subdirectory(particles)

# Add splat loader example
add_subdirectory(splat-loader)

# Add scene test example
add_subdirectory(scene-test)

# Add naive splat cpu example
add_subdirectory(naive-splat-cpu)

# Add unit tests
add_subdirectory(unit-tests)

# Add performance tests
add_subdirectory(perf-tests)

# Add GPU sorting renderer example
add_subdirectory(gpu-sorting-renderer)

# Add hybrid splat renderer example (CPU + GPU sorting)
add_subdirectory(hybrid-splat-renderer)