# Examples directory

# Add triangle example
add_subdirectory(triangle)

# Add particles example
add_subdirectory(particles)

# Add splat loader example
add_subdirectory(splat-loader)

# Add scene test example
add_subdirectory(scene-test)

# Add unit tests
add_subdirectory(unit-tests)

# Add performance tests
add_subdirectory(perf-tests)

# Add hybrid splat renderer example (CPU + GPU sorting)
add_subdirectory(hybrid-splat-renderer)